--- a/SustainabilityAppV1/Base.lproj/Main.storyboard
+++ b/SustainabilityAppV1/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0Ir-4E-hxe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0Ir-4E-hxe">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -940,7 +941,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
-                                    <rect key="frame" x="16" y="466" width="56" height="21"/>
+                                    <rect key="frame" x="16" y="413" width="56" height="21"/>
                                 </variation>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cTz-Ig-6QR">
@@ -951,6 +952,13 @@
                                     <rect key="frame" x="112" y="311" width="97" height="30"/>
                                 </variation>
                             </textField>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leaf.png" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CQY-k1-kic">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="16" y="442" width="240" height="139"/>
+                                </variation>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -959,8 +967,12 @@
                             <constraint firstItem="l3e-DZ-WtJ" firstAttribute="leading" secondItem="6y5-o5-5vI" secondAttribute="trailing" constant="10" id="6hG-F5-R48"/>
                             <constraint firstItem="4rS-sp-fnJ" firstAttribute="leading" secondItem="WFq-uR-HLL" secondAttribute="leadingMargin" constant="5" id="82J-Sg-lFW"/>
                             <constraint firstItem="4rS-sp-fnJ" firstAttribute="top" secondItem="l3e-DZ-WtJ" secondAttribute="bottom" constant="30" id="J5t-n6-ny1"/>
+                            <constraint firstItem="CQY-k1-kic" firstAttribute="width" secondItem="WFq-uR-HLL" secondAttribute="height" multiplier="3:10" id="MAI-ET-HbY"/>
                             <constraint firstItem="cTz-Ig-6QR" firstAttribute="leading" secondItem="4rS-sp-fnJ" secondAttribute="trailing" constant="5" id="Qts-2F-uIS"/>
+                            <constraint firstItem="cTz-Ig-6QR" firstAttribute="centerX" secondItem="CQY-k1-kic" secondAttribute="centerX" constant="-44.5" id="S5j-ah-EAS"/>
                             <constraint firstAttribute="centerX" secondItem="xbH-LP-8dG" secondAttribute="centerX" id="bGV-rd-MSF"/>
+                            <constraint firstAttribute="centerX" secondItem="CQY-k1-kic" secondAttribute="centerX" constant="-5" id="dnS-DC-bTP"/>
+                            <constraint firstAttribute="centerY" secondItem="CQY-k1-kic" secondAttribute="centerY" constant="-151.5" id="hjB-uZ-s0j"/>
                             <constraint firstItem="cTz-Ig-6QR" firstAttribute="bottom" secondItem="4rS-sp-fnJ" secondAttribute="bottom" id="jQS-JX-DlR"/>
                             <constraint firstItem="6y5-o5-5vI" firstAttribute="top" secondItem="xbH-LP-8dG" secondAttribute="bottom" constant="10" id="mDr-wb-Amc"/>
                             <constraint firstItem="Pe3-cm-5A2" firstAttribute="top" secondItem="4rS-sp-fnJ" secondAttribute="bottom" constant="10" id="o2O-mJ-Rg9"/>
@@ -975,6 +987,7 @@
                                 <exclude reference="4rS-sp-fnJ"/>
                                 <exclude reference="Pe3-cm-5A2"/>
                                 <exclude reference="cTz-Ig-6QR"/>
+                                <exclude reference="CQY-k1-kic"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="0NR-0N-kgt"/>
@@ -986,7 +999,11 @@
                                 <exclude reference="82J-Sg-lFW"/>
                                 <exclude reference="J5t-n6-ny1"/>
                                 <exclude reference="Qts-2F-uIS"/>
+                                <exclude reference="S5j-ah-EAS"/>
                                 <exclude reference="jQS-JX-DlR"/>
+                                <exclude reference="MAI-ET-HbY"/>
+                                <exclude reference="dnS-DC-bTP"/>
+                                <exclude reference="hjB-uZ-s0j"/>
                                 <exclude reference="o2O-mJ-Rg9"/>
                                 <exclude reference="yb5-2f-xOA"/>
                             </mask>
@@ -999,6 +1016,7 @@
                                 <include reference="4rS-sp-fnJ"/>
                                 <include reference="Pe3-cm-5A2"/>
                                 <include reference="cTz-Ig-6QR"/>
+                                <include reference="CQY-k1-kic"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="0NR-0N-kgt"/>
@@ -1010,24 +1028,33 @@
                                 <include reference="82J-Sg-lFW"/>
                                 <include reference="J5t-n6-ny1"/>
                                 <include reference="Qts-2F-uIS"/>
+                                <include reference="S5j-ah-EAS"/>
                                 <include reference="jQS-JX-DlR"/>
+                                <include reference="MAI-ET-HbY"/>
+                                <include reference="dnS-DC-bTP"/>
+                                <include reference="hjB-uZ-s0j"/>
                                 <include reference="o2O-mJ-Rg9"/>
                                 <include reference="yb5-2f-xOA"/>
                             </mask>
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" id="uaY-dy-bqA">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="sJv-Q5-TgH"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="sJv-Q5-TgH">
+                            <connections>
+                                <action selector="cancel:" destination="BlA-JP-JTd" id="v3X-in-StQ"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="JcY-Im-bqE"/>
                     </navigationItem>
                     <connections>
                         <outlet property="cat_picker" destination="xbH-LP-8dG" id="mFO-rE-qIZ"/>
+                        <outlet property="image1" destination="CQY-k1-kic" id="shX-dK-xzy"/>
                         <outlet property="title_field" destination="l3e-DZ-WtJ" id="bsl-tD-ZV9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nqB-f0-saO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4000.5" y="-2243.25"/>
+            <point key="canvasLocation" x="3880.5" y="-2537.25"/>
         </scene>
     </scenes>
     <resources>
